--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # =====================
-# ?? Email Configuration
+# 📧 Email Configuration
 # =====================
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
@@ -10,43 +10,41 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.default-encoding=UTF-8
 
 # ==========================
-# ? YugabyteDB Configuration (PostgreSQL-compatible)
+# 🐘 PostgreSQL (Railway External)
 # ==========================
-spring.datasource.url=jdbc:postgresql://localhost:5433/yugabyte
-spring.datasource.username=yugabyte
-spring.datasource.password=yugabyte
-spring.datasource.url=jdbc:postgresql://postgres-lhpb.railway.internal:5432/railway?sslmode=require
-spring.datasource.username=postgres
-spring.datasource.password=eZzDzJxvFnPlZhRMVRBrvkRIdOrLLvbc
+spring.datasource.url=jdbc:postgresql://<YOUR-RAILWAY-HOST>:<PORT>/<DATABASE>?sslmode=require
+spring.datasource.username=<YOUR-USERNAME>
+spring.datasource.password=<YOUR-PASSWORD>
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# JPA / Hibernate Configuration
+# =====================
+# 🪣 MinIO (External)
+# =====================
+minio.url=https://<YOUR-MINIO-HOST>:<PORT>
+minio.public-url=https://<YOUR-MINIO-HOST>:<PORT>
+minio.access-key=<YOUR-MINIO-ACCESS-KEY>
+minio.secret-key=<YOUR-MINIO-SECRET-KEY>
+minio.bucket=binary-files
+
+# =====================
+# 📦 Kafka (External)
+# =====================
+spring.kafka.bootstrap-servers=<YOUR-KAFKA-HOST>:<PORT>
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.consumer.group-id=job-scheduler-group
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.listener.missing-topics-fatal=false
+
+# ==========================
+# ⚙️ JPA / Hibernate
+# ==========================
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-
-# =====================
-# ? Kafka Configuration
-# =====================
-#spring.kafka.bootstrap-servers=localhost:9092
-#spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
-#spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
-#spring.kafka.consumer.group-id=job-scheduler-group
-#spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-#spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-#spring.kafka.listener.missing-topics-fatal=false
-
-# =====================
-# ? MinIO Configuration
-# =====================
-minio.url=http://localhost:9000
-minio.public-url=http://localhost:9000
-minio.access-key=minioadmin
-minio.secret-key=minioadmin123
-minio.bucket=binary-files
-
 # =========================
-# ? Disable H2 Console
+# ❌ Disable H2 Console
 # =========================
 spring.h2.console.enabled=false
