--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,13 +18,13 @@ spring.datasource.password=<YOUR-PASSWORD>
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # =====================
-# 🪣 MinIO (External)
+# 🪣 MinIO (Using Railway ENV)
 # =====================
-minio.url=https://<YOUR-MINIO-HOST>:<PORT>
-minio.public-url=https://<YOUR-MINIO-HOST>:<PORT>
-minio.access-key=<YOUR-MINIO-ACCESS-KEY>
-minio.secret-key=<YOUR-MINIO-SECRET-KEY>
-minio.bucket=binary-files
+minio.url=${MINIO_URL}
+minio.public-url=${MINIO_PUBLIC_URL}
+minio.access-key=${MINIO_ACCESS_KEY}
+minio.secret-key=${MINIO_SECRET_KEY}
+minio.bucket=${MINIO_BUCKET}
 
 # =====================
 # 📦 Kafka (External)
