--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,12 +10,13 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.default-encoding=UTF-8
 
 # ==========================
-# 🐘 PostgreSQL (Railway External)
+# 🐘 PostgreSQL (Using ENV)
 # ==========================
-spring.datasource.url=jdbc:postgresql://<YOUR-RAILWAY-HOST>:<PORT>/<DATABASE>?sslmode=require
-spring.datasource.username=<YOUR-USERNAME>
-spring.datasource.password=<YOUR-PASSWORD>
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
+
 
 # =====================
 # 🪣 MinIO (Using Railway ENV)
