--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,9 +28,9 @@ minio.secret-key=${MINIO_SECRET_KEY}
 minio.bucket=${MINIO_BUCKET}
 
 # =====================
-# 📦 Kafka (External)
+# 📦 Kafka (Railway Hosted)
 # =====================
-spring.kafka.bootstrap-servers=<YOUR-KAFKA-HOST>:<PORT>
+spring.kafka.bootstrap-servers=kafka.railway.internal:29092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.consumer.group-id=job-scheduler-group
