--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,8 +27,9 @@ minio.access-key=${MINIO_ACCESS_KEY}
 minio.secret-key=${MINIO_SECRET_KEY}
 minio.bucket=${MINIO_BUCKET}
 
+
 # =====================
-# 📦 Kafka (Railway Hosted)
+# 📦 Kafka (Railway Internal)
 # =====================
 spring.kafka.bootstrap-servers=kafka.railway.internal:29092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
@@ -37,7 +38,6 @@ spring.kafka.consumer.group-id=job-scheduler-group
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.listener.missing-topics-fatal=false
-
 # ==========================
 # ⚙️ JPA / Hibernate
 # ==========================
