--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,9 @@
 # =====================
+# 🚀 Server Port Binding
+# =====================
+server.port=${PORT:8080}
+
+# =====================
 # 📧 Email Configuration
 # =====================
 spring.mail.host=smtp.gmail.com
@@ -17,7 +22,6 @@ spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-
 # =====================
 # 🪣 MinIO (Using Railway ENV)
 # =====================
@@ -27,17 +31,17 @@ minio.access-key=${MINIO_ACCESS_KEY}
 minio.secret-key=${MINIO_SECRET_KEY}
 minio.bucket=${MINIO_BUCKET}
 
-
 # =====================
 # 📦 Kafka (Railway Internal)
 # =====================
-spring.kafka.bootstrap-servers=kafka.railway.internal:9092
+spring.kafka.bootstrap-servers=${SPRING_KAFKA_BOOTSTRAP_SERVERS}
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.consumer.group-id=job-scheduler-group
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.listener.missing-topics-fatal=false
+
 # ==========================
 # ⚙️ JPA / Hibernate
 # ==========================
