--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,8 @@ server.port=${PORT:8080}
 # =====================
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=rshauryasingh@gmail.com
-spring.mail.password=juwduckbavzblycu
+spring.mail.username=${EMAIL_USERNAME}
+spring.mail.password=${EMAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.default-encoding=UTF-8
@@ -45,7 +45,7 @@ spring.kafka.listener.missing-topics-fatal=false
 # ==========================
 # ⚙️ JPA / Hibernate
 # ==========================
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+# You can omit the dialect as Hibernate will pick it automatically for PostgreSQL
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
