--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -53,3 +53,9 @@ spring.jpa.show-sql=true
 # ❌ Disable H2 Console
 # =========================
 spring.h2.console.enabled=false
+# =====================
+# 🛠️ Kafka Admin (Auto-create Topics)
+# =====================
+spring.kafka.admin.auto-create=true
+spring.kafka.admin.fail-fast=false
+
