--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,61 +1,23 @@
 # =====================
-# 🚀 Server Port Binding
-# =====================
-server.port=${PORT:8080}
-
-# =====================
-# 📧 Email Configuration
-# =====================
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=${EMAIL_USERNAME}
-spring.mail.password=${EMAIL_PASSWORD}
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.default-encoding=UTF-8
-
-# ==========================
-# 🐘 PostgreSQL (Using ENV)
-# ==========================
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASSWORD}
-spring.datasource.driver-class-name=org.postgresql.Driver
-
-# =====================
-# 🪣 MinIO (Using Railway ENV)
-# =====================
-minio.url=${MINIO_URL}
-minio.public-url=${MINIO_PUBLIC_URL}
-minio.access-key=${MINIO_ACCESS_KEY}
-minio.secret-key=${MINIO_SECRET_KEY}
-minio.bucket=${MINIO_BUCKET}
-
-# =====================
 # 📦 Kafka (Railway Internal)
 # =====================
-spring.kafka.bootstrap-servers=${SPRING_KAFKA_BOOTSTRAP_SERVERS}
+spring.kafka.bootstrap-servers=${SPRING_KAFKA_BOOTSTRAP_SERVERS:kafka.railway.internal:29092}
+
+# ✅ Producer config
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+
+# ✅ Consumer config
 spring.kafka.consumer.group-id=job-scheduler-group
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.listener.missing-topics-fatal=false
+spring.kafka.consumer.auto-offset-reset=earliest
 
-# ==========================
-# ⚙️ JPA / Hibernate
-# ==========================
-# You can omit the dialect as Hibernate will pick it automatically for PostgreSQL
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-
-# =========================
-# ❌ Disable H2 Console
-# =========================
-spring.h2.console.enabled=false
-# =====================
-# 🛠️ Kafka Admin (Auto-create Topics)
-# =====================
+# ✅ Kafka Admin config (for auto topic creation)
 spring.kafka.admin.auto-create=true
 spring.kafka.admin.fail-fast=false
 
+# ✅ Optional: Enable Kafka debug logging (good for Railway debugging)
+logging.level.org.springframework.kafka=DEBUG
+logging.level.org.apache.kafka=DEBUG
