--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/railway}
+spring.datasource.username=${DB_USER:postgres}
+spring.datasource.password=${DB_PASSWORD:password}
 # =====================
 # 📦 Kafka (Railway Internal)
 # =====================
