--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,24 +5,27 @@ spring.datasource.username=${PGUSER}
 spring.datasource.password=${PGPASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+# =====================
 # 📦 Kafka (Railway Internal)
 # =====================
-spring.kafka.bootstrap-servers=${SPRING_KAFKA_BOOTSTRAP_SERVERS:kafka.railway.internal:29092}
+spring.kafka.bootstrap-servers=kafka.railway.internal:29092
 
-# ✅ Producer config
+# Producer Config
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
 
-# ✅ Consumer config
+# Consumer Config
 spring.kafka.consumer.group-id=job-scheduler-group
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-spring.kafka.listener.missing-topics-fatal=false
-spring.kafka.consumer.auto-offset-reset=earliest
 
-# ✅ Kafka Admin config (for auto topic creation)
+# Admin (Auto-create topics)
 spring.kafka.admin.auto-create=true
 spring.kafka.admin.fail-fast=false
+
+# Listener Config
+spring.kafka.listener.missing-topics-fatal=false
+
 
 # ✅ Optional: Enable Kafka debug logging (good for Railway debugging)
 logging.level.org.springframework.kafka=DEBUG
