--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,20 @@
-# At the top of application.properties
+# =====================
+# 🔍 Debugging & General
+# =====================
 debug=true
+
+# =====================
+# 🗄️ Database (PostgreSQL via Railway)
+# =====================
 spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${PGUSER}
 spring.datasource.password=${PGPASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Optional JPA Config (recommended for dev/prod)
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # =====================
 # 📦 Kafka (Railway Internal)
@@ -19,14 +30,16 @@ spring.kafka.consumer.group-id=job-scheduler-group
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 
-# Admin (Auto-create topics)
+# Admin Config
 spring.kafka.admin.auto-create=true
 spring.kafka.admin.fail-fast=false
 
 # Listener Config
 spring.kafka.listener.missing-topics-fatal=false
 
-
-# ✅ Optional: Enable Kafka debug logging (good for Railway debugging)
+# =====================
+# 🐞 Logging
+# =====================
+# Spring Kafka + Apache Kafka logs
 logging.level.org.springframework.kafka=DEBUG
 logging.level.org.apache.kafka=DEBUG
