--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,24 +2,45 @@
 # 🔍 Debugging & General
 # =====================
 debug=true
+server.port=${PORT:8080}
 
 # =====================
-# 🗄️ Database (PostgreSQL via Railway)
+# 📧 Email Configuration
 # =====================
-spring.datasource.url=${DATABASE_URL}
-spring.datasource.username=${PGUSER}
-spring.datasource.password=${PGPASSWORD}
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${EMAIL_USERNAME}
+spring.mail.password=${EMAIL_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.protocol=smtp
+spring.mail.test-connection=true
+
+# =====================
+# 🗄️ Database (PostgreSQL)
+# =====================
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# Optional JPA Config (recommended for dev/prod)
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # =====================
-# 📦 Kafka (Railway Internal)
+# ☁️ MinIO (S3-compatible Storage)
 # =====================
-spring.kafka.bootstrap-servers=kafka.railway.internal:29092
+minio.url=${MINIO_URL}
+minio.public-url=${MINIO_PUBLIC_URL}
+minio.access-key=${MINIO_ACCESS_KEY}
+minio.secret-key=${MINIO_SECRET_KEY}
+minio.bucket=${MINIO_BUCKET}
+
+# =====================
+# 📦 Kafka
+# =====================
+spring.kafka.bootstrap-servers=${SPRING_KAFKA_BOOTSTRAP_SERVERS}
 
 # Producer Config
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
@@ -30,16 +51,15 @@ spring.kafka.consumer.group-id=job-scheduler-group
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 
-# Admin Config
+# Admin
 spring.kafka.admin.auto-create=true
 spring.kafka.admin.fail-fast=false
 
-# Listener Config
+# Listener
 spring.kafka.listener.missing-topics-fatal=false
 
 # =====================
 # 🐞 Logging
 # =====================
-# Spring Kafka + Apache Kafka logs
 logging.level.org.springframework.kafka=DEBUG
 logging.level.org.apache.kafka=DEBUG
